--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Food_Engine"
-        tools:targetApi="33">
+        tools:targetApi="31">
         <activity
             android:name=".OrderActivity"
             android:exported="true">
@@ -24,7 +24,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="false">
         </activity>
     </application>
 
