linked main screen with detail screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Food_Engine"
         tools:targetApi="31">
         <activity
-            android:name=".DetailActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,20 +22,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".OrderActivity"
-            android:exported="false">
-
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <activity
+            android:name=".DetailActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".OrderActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
