--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,21 @@
         android:theme="@style/Theme.Food_Engine"
         tools:targetApi="31">
         <activity
-            android:name=".welcomeActivity"
+            android:name=".RegistrationActivity"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".welcomeActivity"
+            android:exported="false">
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
@@ -34,10 +36,10 @@
 
         <activity
             android:name=".DetailActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".OrderActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
